                     CHANGES version 5.28.1

           This file summarizes changes made since 5.0

Version 5.28.1

Fixed: Issue #965: If you run monit CLI with custom configuration file, via the -c option, and the file cannot be read
by monit, AssertException was thrown. Monit will report normal error instead of the exception now.

Fixed: Issue #966: Service name pattern for CLI commands was case-sensitive in 5.28.0.

Fixed: Issue #968: The systemd and upstart templates used to set the path to the configuration file in the sysconfdir,
which is optionally set during the compilation. That path wasn't fully expanded. The template now doesn't specify the
explicit path and lets monit search for the configuration file in all supported locations (including the sysconfdir).

Fixed: Issue #971: The optional "ELSE" part of the "IF LINK UP THEN <action> ELSE IF FAILED THEN <action>" and
"IF LINK DOWN THEN <action> ELSE IF SUCCEDED THEN <action>".

Fixed: Issue #976: If the space free test recovered, it did always report percent free, regadless of the test unit.
If absolute bytes limit is set, Monit will report absolute bytes value of current space free as well.


Version 5.28.0

Deprecated: Monit "IF FAILED LINK" test was renamed to "IF LINK DOWN". The old syntax is deprecated, but still
works for backward compatibility.

New: Added "IF LINK UP" network interface test, which allows to monitor network interface that is by default down,
and trigger action, when the interface is enabled. Example:
    if link up then "/usr/bin/monit start backup"
Notes: When "link up" test is used, the link errors tests are ignored, as these tests share the same event type
and would reset the status. Also, mixing "link up" and "link down" in the same "check network" is not supported.

New: Monit can now watch offline TCP/UDP ports and perform action on successful connection.
It can be used as a security check, e.g. if a service like mysql should not be publicly available, or